--- a/mirrorui/stylus/coms/msgbox.styl
+++ b/mirrorui/stylus/coms/msgbox.styl
@@ -32,6 +32,8 @@ $selector-msgbox='.msgbox'
     &-btn-area
         display:flex
         justify-content: end
+        & .btn:last-child
+            margin-left:30px
     // 位置,9宫格(1,2...5...,9),先行后列.组合下列样式实现
     // 行居中
     &-r-c
