--- a/mirrorui/stylus/coms/msgshow.styl
+++ b/mirrorui/stylus/coms/msgshow.styl
@@ -1,7 +1,7 @@
 ﻿if $noOutPutComAlone!=1
     @import "../importCom"
 // 信息提示框
-.msgshow
+{$selector-msgshow}
     display:none
     align-items: center
     border: 1px solid $border-color
