--- a/mirrorui/stylus/theme.styl
+++ b/mirrorui/stylus/theme.styl
@@ -1,4 +1,7 @@
-﻿// 全局主题颜色变量
+﻿if $noOutPutComAlone!=1
+    @import "importCom"
+
+// 全局主题颜色变量
 :root
     --back-color:$white['0']// 背景色
     --front-color:$black['1']// 前景色,字体颜色
@@ -12,9 +15,8 @@ body
 // 全局主题前缀
 $themePre='.theme'
 // 全局主题影响范围:背景色,字体色,边框,滚动条
-if $themeTag is defined
-    {$themePre}-dark
-        color-scheme: dark// 这个规则将滚动条颜色设为深色
-        --back-color: $black['1']// 背景色
-        --front-color: $white['1']// 前景(字体)色
-        --border-color:$gray['6']// 边框色
+{$themePre}-dark
+    color-scheme: dark// 这个规则将滚动条颜色设为深色
+    --back-color: $black['1']// 背景色
+    --front-color: $white['1']// 前景(字体)色
+    --border-color:$gray['6']// 边框色
