文档调整,错误修正

--- a/mirrorui/stylus/coms/table.styl
+++ b/mirrorui/stylus/coms/table.styl
@@ -13,9 +13,7 @@
         border-bottom:1px solid $border-color
     // 单元格
     & th,& td
-        padding:8px
-        // 表头和单元格内容需要对齐时,可以在父级的tr或table标签上设置对齐样式
-        text-align: inherit
+        padding:.5rem
     // 带内外边框的表格
     &.border th,&.border td
         border: 1px solid $border-color
