--- a/mirrorui/stylus/coms/msgshow.styl
+++ b/mirrorui/stylus/coms/msgshow.styl
@@ -5,7 +5,7 @@
     display:none
     align-items: center
     border: 1px solid $border-color
-    grid-template-columns:10% auto 5%
+    grid-template-columns:100px auto 5%
     padding: .625rem
     & .title
         font-weight: 500
