--- a/mirrorui/stylus/coms/mnavmenu.styl
+++ b/mirrorui/stylus/coms/mnavmenu.styl
@@ -1,7 +1,4 @@
-﻿if $noOutPutComAlone!=1
-    @import "../importCom"
-
-// 底部导航主菜单,用于手机版.支持类似微信菜单形式和APP导航菜单形式
+﻿// ==底部导航主菜单,用于手机版.支持类似微信菜单形式和APP导航菜单形式==//
 $selector-mnavmenu='.mnavmenu'
 // 外层容器 nav
 {$selector-mnavmenu}
