--- a/mirrorui/stylus/coms/msgshow.styl
+++ b/mirrorui/stylus/coms/msgshow.styl
@@ -1,6 +1,4 @@
-﻿if $noOutPutComAlone!=1
-    @import "../importCom"
-// 信息提示框
+﻿// ==信息提示框==//
 {$selector-msgshow}
     display:none
     align-items: center
