--- a/mirrorui/stylus/theme.styl
+++ b/mirrorui/stylus/theme.styl
@@ -1,7 +1,4 @@
-﻿if $noOutPutComAlone!=1
-    @import "importCom"
-
-// 全局主题颜色变量
+﻿// 全局主题颜色变量
 :root
     --back-color:$white['0']// 背景色
     --front-color:$black['1']// 前景色,字体颜色
