--- a/mirrorui/stylus/variables/color.styl
+++ b/mirrorui/stylus/variables/color.styl
@@ -151,7 +151,7 @@ $blackwhitegray-dict={
     white:$white,
     gray:$gray
 }
-// 彩色字典
+// 彩色字典(全部)
 $colors-dict={
     red:$red,
     orange:$orange,
